# curandera

./: .gitignore  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  azure-pipelines.yml  pyproject.toml  setup.cfg
src/curandera/: __init__.py  cache.py  core.py  tool.py
tests/: test_curandera.py
