[tool.poetry]
name = "curandera"
version = "0.1.0"
description = ""
authors = ["Isabella Muerte <63051+slurps-mad-rips@users.noreply.github.com>"]
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/slurps-mad-rips/curandera'
include = ["tests", "docs"]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.3.2"
cmake = "^3.14"
ninja = "^1.9"

[tool.poetry.dev-dependencies]
pytest-runner = "^5.1"
pytest-cov = "^2.7"
pytest = "^3.0"
black = { version = "^19.3b0", allows-prereleases = true }
codecov = "^2.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12", "pip", "setuptools"]
build-backend = "poetry.masonry.api"
